--- a/SEPM.html
+++ b/SEPM.html
@@ -45,11 +45,11 @@
 
         .module:hover {
             transform: scale(1.05);
-             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             /* Modify this line */
         }
 
-        .view-btn:hover{
+        .view-btn:hover {
             background-color: rgba(0, 0, 255, 0.731);
         }
 
@@ -121,9 +121,9 @@
                 <p><b>Process Models:</b> A generic process model, Process assessment and improvement, Prescriptive
                     process models, Waterfall model, Incremental process models, Evolutionary process models, Concurrent
                     models, Specialized process models</p>
-                    
+<div>
                 <a class="btn btn-primary download-btn" href="./assests/module1.pdf" download>Download PDF</a>
-                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module1-viewer')">View PDF</button>
+                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module1-viewer')">View PDF</button></div>
                 <iframe id="module1-viewer" class="pdf-viewer" src="./assests/module1.pdf"></iframe>
             </div>
             <div class="module" id="module2">
@@ -135,8 +135,8 @@
                 <p> <b>Requirements Modeling Scenarios, Information and Analysis classes:</b> Requirement Analysis,
                     Scenario based modeling, UML models that supplement the Use Case, Data modeling Concepts class
                     Based Modeling</p>
-                <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
-                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button>
+               <div> <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
+                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button></div>
                 <iframe id="module2-viewer" class="pdf-viewer" src="./assests/module2.pdf"></iframe>
             </div>
             <div class="module" id="module3">
@@ -147,8 +147,8 @@
                 <p><b> Principles that guide practice:</b> Software Engineering Knowledge, Core principles, Principles
                     that
                     guide each framework activity</p>
-                <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
-                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View PDF</button>
+              <div>  <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
+                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View PDF</button></div>
                 <iframe id="module3-viewer" class="pdf-viewer" src="./assests/module3.pdf"></iframe>
             </div>
             <div class="module" id="module4">
@@ -159,8 +159,8 @@
                     Software Projects, Stakeholders, Setting Objectives, Business Case, Project Success and Failure,
                     Management and Management Control, Project Management life cycle, Traditional versus Modern
                     Project Management Practices. </p>
-                <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
-                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button>
+               <div> <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
+                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button></div>
                 <iframe id="module4-viewer" class="pdf-viewer" src="./assests/module4.pdf"></iframe>
             </div>
             <div class="module" id="module5">
@@ -172,8 +172,8 @@
                     quality
                     management, Quality Management systems, process capability models, techniques to enhance software
                     quality, testing, Software reliability, quality plans. </p>
-                <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
-                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button>
+            <div>    <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
+                <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button></div>
                 <iframe id="module5-viewer" class="pdf-viewer" src="./assests/module5.pdf"></iframe>
             </div>
         </div>
