--- a/fsd.html
+++ b/fsd.html
@@ -12,19 +12,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        .module-container {
+          .module-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
             margin-top: 20px;
-            background: linear-gradient(135deg, #ffcc33 0%, #ff66cc 100%);
+            /* background: linear-gradient(135deg, #2A3D45 0%, #ECE2D0 100%); */
             padding: 20px;
             border-radius: 15px;
+
         }
 
         .module {
-            border: 1px solid #ccc;
+            /* border: 1px solid #2A3D45; */
             border-radius: 10px;
             padding: 20px;
             width: 70vw;
@@ -34,25 +35,41 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            
+            overflow: hidden;
+            background-color: #f7f7f7;
+            color: black !important;
+            font-weight: 400;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* Add this line */
         }
 
         .module:hover {
             transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            /* Modify this line */
         }
 
-        .buttons {
-            margin-top: 20px;
+        .view-btn:hover {
+            background-color: rgba(0, 0, 255, 0.731);
         }
+
 
         .download-btn,
         .view-btn {
             /* display: block; */
             margin: 10px auto;
+            background-color: #ECE2D0;
+            color: #2A3D45;
+            border: none;
+            font-weight: 500;
         }
 
+        /* .download-btn {
+            width: vw;
+        } */
+
         .pdf-viewer {
-            width: 90%;
+            width: 65vw;
             height: 500px;
             border: none;
             margin-top: 10px;
@@ -92,7 +109,7 @@
             </div>
         </div>
     </nav>
-    <p style="text-align: center; font-size: 30px; color: rgb(202, 25, 54); font-weight: 600;"> Full Stack Development - 21CS62</p>
+    <p style="text-align: center; font-size: 30px; color:#2A3D45; font-weight: 600;"> Full Stack Development - 21CS62</p>
     <div class="container">
         <div class="module-container">
             <div class="module" id="module1">
