--- a/notes.html
+++ b/notes.html
@@ -69,7 +69,7 @@
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </a>
-            <a href="./fsd.html"  class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./Notes/CG.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS63 </p> <p>Computer Graphics and Image Processing</p></h5>
