--- a/notes.html
+++ b/notes.html
@@ -7,7 +7,7 @@
     <title>Notes</title>
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="notes.css">
+    <link rel="stylesheet" href="./CSS/notes.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -54,7 +54,7 @@
                 </div>
             </a>
 
-            <a href="./SEPM.html"  class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./Notes/SEPM.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS61 </p> <p>Software Engineering and Project Management</p></h5>
@@ -62,7 +62,7 @@
 
                 </div>
             </a>
-            <a href="./fsd.html"  class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./Notes/fsd.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS62 </p> <p>Full Stack Development</p></h5>
