--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-5305831131761128">
   <title>VTU 21 Scheme Hub</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="index.css">
