--- a/Projects/bothprojects.html
+++ b/Projects/bothprojects.html
@@ -70,18 +70,19 @@
     </div>
   </nav>
   
-
+<!-- ------------ -->
   <div class="d-flex flex-wrap justify-content-center gap-5 m-5">
     <a href="./cgproject.html"  class="card m-2 animated-card" style="width: 18rem;">
-        <img src="../assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+        <img src="../assests/Pro2.jpg" class="card-img-top" alt="Example image" loading="lazy">
         <div class="card-body">
             <h5 class="card-title">Computer Graphics and Image Processing Miniprojects</h5>
             <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
         </div>
     </a>
 
+    <!-- ---------------- -->
     <a href="./Notes/SEPM.html"  class="card m-2 animated-card" style="width: 18rem;">
-        <img src="../assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+        <img src="../assests/pro4.jpeg" class="card-img-top" alt="Example image" loading="lazy">
         <div class="card-body">
             <h5 class="card-title"><p>
                 21CSMP67 </p>Mini-Projects</h5>
@@ -89,6 +90,11 @@
 
         </div>
     </a>
+
+    
+
+
+
     </div>
  
 
