--- a/Projects/bothprojects.html
+++ b/Projects/bothprojects.html
@@ -81,7 +81,7 @@
     </a>
 
     <!-- ---------------- -->
-    <a href="./Notes/SEPM.html"  class="card m-2 animated-card" style="width: 18rem;">
+    <a href="./Mainmini.html"  class="card m-2 animated-card" style="width: 18rem;">
         <img src="../assests/pro4.jpeg" class="card-img-top" alt="Example image" loading="lazy">
         <div class="card-body">
             <h5 class="card-title"><p>
